# ngAP

./: .gitignore  .gitmodules  1_download_benchmark.sh  2_build_docker.sh  3_launch_docker.sh  4_build_all.sh  5_run_all.sh  6_gen_all.sh  README.md  clean.sh  env.sh
code/: CMakeLists.txt
code/include/commons/: NFA.h  SymbolStream.h  common_func.h  device_intrinsics.h  graph.h  group_graph.h  my_bitset.h  nfa_utils.h  precompute_table.h  report_formatter.h  validate.h
code/include/gpunfautils/: abstract_gpunfa.h  array2.h  common.h  utils.h
code/scripts/: collect_keyword_list_throughput.txt  collect_results.py  launch_exps.py  llcommons.py
code/scripts/configs/: app_spec_ngap_new  app_spec_ngap_new_quickvalidation  app_spec_ngap_new_quickvalidation_part1  app_spec_ngap_new_quickvalidation_part2  app_spec_ngap_new_quickvalidation_part3  exec_config_ngap_groups_best  exec_config_ngap_groups_best_4degree  exec_config_ngap_groups_best_4degree_oneinput  exec_config_ngap_groups_best_oneinput  exec_config_ngap_groups_design_NAP  exec_config_ngap_groups_design_NAP_4degree  exec_config_ngap_groups_design_cpu  exec_config_ngap_groups_design_cpu_oneinput  exec_config_ngap_groups_design_sota  exec_config_ngap_groups_design_sota_4degree  exec_config_ngap_groups_design_sota_4degree_oneinput  exec_config_ngap_groups_design_sota_oneinput  exec_config_ngap_groups_design_sota_runahead  exec_config_ngap_groups_design_sota_runahead_4degree  exec_config_ngap_groups_design_sota_runahead_4degree_oneinput  exec_config_ngap_groups_design_sota_runahead_oneinput  exec_config_ngap_groups_nap_default  exec_config_ngap_groups_nap_default_4degree  exec_config_ngap_groups_nap_default_4degree_oneinput  exec_config_ngap_groups_nap_default_oneinput
code/src/asyncap/: CMakeLists.txt  Makefile
code/src/asyncap/include/: run_ahead_approach.h  run_ahead_kernels.h  scan_kernels.h
code/src/asyncap/src/: main.cu  run_ahead_approach.cu
code/src/commons/: NFA.cpp  SymbolStream.cpp  graph.cu  nfa_utils.cpp  precompute_table.cu  report_formatter.cpp  validate.cpp
code/src/gpunfautils/: abstract_gpunfa.cu
code/src/infant/: infant.cu  infant.h  infant_config.h  infant_kernels.cu  infant_kernels.h  main.cu
code/src/ngap/: kernel.h  kernel_bap.cu  kernel_helper.h  kernel_ngap_O0.cu  kernel_ngap_O1.cu  kernel_ngap_O3.cu  kernel_ngap_O4.cu  kernel_ngap_OA.cu  main.cu  ngap.cu  ngap.h  ngap_buffer.cu  ngap_buffer.h  ngap_option.h
code/src/obat/: main.cu  one_byte_a_time_kernels.h  one_byte_at_a_time.cu  one_byte_at_a_time.h  option_config.h
code/src/ppopp12/: main.cu  ppopp12.cu  ppopp12.h  ppopp12_kernels.cu  ppopp12_kernels.h  ppopp12_option.h
docker/: Dockerfile
ref_results/: tab4_throughput.csv  tab6_latency.csv
ref_results/raw/throughput_cpu/: throughput_cpu_part1.csv  throughput_cpu_part2.csv
ref_results/raw/throughput_cpu_oneinput/: throughput_cpu_part1.csv  throughput_cpu_part2.csv
ref_results/raw/throughput_gpu_nap_best/: throughput_gpu_napbest_part1.csv  throughput_gpu_napbest_part2.csv  throughput_gpu_napbest_part3.csv
ref_results/raw/throughput_gpu_nap_best_oneinput/: throughput_gpu_napbest_oneinput_part1.csv  throughput_gpu_napbest_oneinput_part2.csv  throughput_gpu_napbest_oneinput_part3.csv
ref_results/raw/throughput_gpu_nap_breakdown/: throughput_nap_breakdown_part1.csv  throughput_nap_breakdown_part2.csv  throughput_nap_breakdown_part3.csv
scripts/: dict_config.py  gen-breakdown-fig14.sh  gen-latency-fig20tab6.sh  gen-throughput-fig13tab4.sh  plot_throughput_gpu_nap_breakdown.py  plot_throughput_gpu_sota.py  plot_throughput_gpu_sota_oneinput.py  run-breakdown.sh  run-latency.sh  run-throughput.sh  run_experiments.sh  run_throughput.sh  run_throughput_NAP_breakdown.sh  run_throughput_cpu.sh  run_throughput_cpu_oneinput.sh  run_throughput_gpu_nap_best.sh  run_throughput_gpu_nap_best_oneinput.sh  run_throughput_gpu_nap_defalut.sh  run_throughput_gpu_nap_defalut_oneinput.sh  run_throughput_gpu_sota_best.sh  run_throughput_gpu_sota_best_oneinput.sh  run_throughput_runahead.sh  run_throughput_runahead_oneinput.sh  table_throughput.py  table_throughput_oneinput.py
(+27 files in other folders)
